@@ -68,6 +68,7 @@ foreach file [lsort [::tcltest::getMatchingFiles]] {
 
 # cleanup
 puts stdout "\nTests ended at [eval $timeCmd]"
+if { $::tcltest::numTests(Total) } { set r $::tcltest::numTests(Failed) } { set r 1 }
 ::tcltest::cleanupTests 1
-return
+exit $r
 
